# stakedotfun

./: .gitignore  Anchor.toml  DOCS.md  MAINNET_TEST_REPORT.md  README.md  package.json
programs/steak/: Cargo.toml
programs/steak/src/: constants.rs  errors.rs  lib.rs
programs/steak/src/instructions/: claim_rewards.rs  close_pool.rs  fund_rewards.rs  initialize_pool.rs  mod.rs  stake.rs  unstake.rs  update_pool.rs
programs/steak/src/state/: mod.rs  stake_pool.rs  user_stake.rs
scripts/: devnet-integration-test.ts  devnet-test.ts  mainnet-integration-test.ts
tests/: steak.ts
