[package]
name = "steak"
version = "0.1.0"
description = "SPL token staking program for pump.fun meme coins"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "steak"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "token_2022", "associated_token"] }
